--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 		<textarea rows="22" cols="30" id="input" placeholder="Paste your message here!"></textarea><br>
 		<button id="enter_button" onclick="main()">SUBMIT</button>
+        <button id= "reload_button" onclick = "reload()">RELOAD</button>
 
 		<div id="output_language"></div>
 		<div id="output_sentiment"></div>
