--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="super-wrapper">
 		<div class="wrapper">
 		<header>
-			<h1>TLDR</h1>
+			<h1 class = "TLDR">TLDR</h1>
 		</header>
 
 		<textarea rows="22" cols="30" id="input" placeholder="Paste your message here!"></textarea><br>
