--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCKTYPE html>
 <html>
 <head>
 	<meta charset = "utf-8">
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script TYPE="text/javascript" src="js/EasyPack.min.js"></script>
   <script TYPE="text/javascript" src="js/TweenLite.min.js"></script>
-	<script type="text/javascript" src = "js/scripts.js"></script>
+	<script type="text/javascript" src = "js/main.js"></script>
 	<script src = "js/three.js"></script>
 
 </head>
@@ -26,7 +26,6 @@
 
 		<textarea rows="22" cols="30" id="input" placeholder="Paste your message here!"></textarea><br>
 		<button id="enter_button" onclick="main()">SUBMIT</button>
-        <button id= "reload_button" onclick = "reload()">RELOAD</button>
 
 		<div id="output_language"></div>
 		<div id="output_sentiment"></div>
