--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name = "description" content = "">
 	<meta name = "author" content = "DAZ">
 	<title>TLDR</title>
+    <link rel="shortcut icon" href="images/TLDR.ico" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script TYPE="text/javascript" src="js/EasyPack.min.js"></script>
